# griffe-typedoc

./: .copier-answers.yml  .coverage-tmp.html  404.html  CONTRIBUTING.md  README.md  duties.py  index.html  llms-full.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
credits/: index.html
docs/.overrides/partials/: comments.html
docs/insiders/: changelog.md  goals.yml  index.md  installation.md
insiders/: index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/griffe_typedoc/: index.html
reference/griffe_typedoc/cli/: index.html
reference/griffe_typedoc/dataclasses/: index.html
reference/griffe_typedoc/debug/: index.html
reference/griffe_typedoc/decoder/: index.html
reference/griffe_typedoc/loader/: index.html
reference/griffe_typedoc/logger/: index.html
scripts/: gen_credits.py
search/: search_index.json
src/griffe_typedoc/: __init__.py  __main__.py  cli.py  dataclasses.py  debug.py  decoder.py  loader.py  logger.py
src/griffe_typedoc/_internal/: dataclasses.py  decoder.py  loader.py  logger.py  models.py
tests/: test_api.py  test_cli.py
