[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "griffe-typedoc"
description = "Signatures for entire TypeScript programs using TypeDoc."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=1.10.14",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/griffe-typedoc"
Documentation = "https://mkdocstrings.github.io/griffe-typedoc"
Changelog = "https://mkdocstrings.github.io/griffe-typedoc/changelog"
Repository = "https://github.com/mkdocstrings/griffe-typedoc"
Issues = "https://github.com/mkdocstrings/griffe-typedoc/issues"
Discussions = "https://github.com/mkdocstrings/griffe-typedoc/discussions"
Gitter = "https://gitter.im/mkdocstrings/griffe-typedoc"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
griffe-typedoc = "griffe_typedoc.cli:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "devdeps.txt",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
